test fixes, docker fixes, rswag full doc
