# api-docs/v1/swagger.yaml
@@ -1,50 +1,84 @@
 ---
-swagger: '2.0'
+openapi: 3.0.1
 info:
   title: API V1
   version: v1
 paths:
-  "/bmr":
-    post:
-      summary: calculate bmr
+  "/bmi":
+    get:
+      summary: calculate bmi
       parameters:
-      - name: calc_params
-        in: body
+      - name: id
         required: true
+        description: Patient ID
+        in: query
         schema:
-          type: object
-          properties:
-            formula:
-              type: string
-              example: mifflin
-              description: Formula name lowercase
-            id:
-              type: integer
-              example: 1
-              description: Patient Id
-      consumes:
-      - application/json
-      produces:
-      - application/json
+          type: integer
       responses:
         '200':
           description: successful
-          schema:
-            type: object
-            properties:
-              id:
-                type: integer
-              formula:
-                type: string
+          content:
+            application/json:
+              example:
+                Category: Obesity
+                bmi: 41.917
+                height: 1.96
+                weight: 161.03
+  "/bmr":
+    post:
+      summary: calculate bmr
+      tags:
+      - BMR
+      parameters: []
+      responses:
+        '200':
+          description: successful
           content:
             application/json:
               example:
                 patient_id: 1
                 formula: harris
-                result: '1357.16264'
-  "/doctors":
+                result: '3283.85895'
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  formula:
+                    type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                formula:
+                  type: string
+                  example: mifflin
+                  description: Formula name lowercase
+                id:
+                  type: integer
+                  example: 1
+                  description: Patient Id
+        required: true
     get:
-      summary: list doctors
+      summary: history bmr
+      tags:
+      - BMR
+      parameters:
+      - name: id
+        in: query
+        required: true
+        schema:
+          type: integer
+      - name: offset
+        in: query
+        schema:
+          type: integer
+      - name: limit
+        in: query
+        schema:
+          type: integer
       responses:
         '200':
           description: successful
@@ -52,192 +86,278 @@ paths:
             application/json:
               example:
               - id: 1
-                first_name: Jefferey
-                last_name: Leuschke
-                middle_name: Spencer
-                created_at: '2025-09-26T22:50:49.745Z'
-                updated_at: '2025-09-26T22:50:49.745Z'
+                patient_id: 1
+                formula_id: 1
+                result: '55.0'
+                calculated_on: '2025-02-21'
+                created_at: '2025-09-27T19:55:19.004Z'
+                updated_at: '2025-09-27T19:55:19.004Z'
+  "/doctors":
+    get:
+      summary: list doctors
+      tags:
+      - Doctor
+      parameters:
+      - name: offset
+        in: query
+        required: false
+        schema:
+          type: number
+      - name: limit
+        in: query
+        required: false
+        schema:
+          type: number
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example:
+              - id: 1
+                first_name: Sunday
+                last_name: Blanda
+                middle_name: Marvin
+                created_at: '2025-09-27T19:55:19.092Z'
+                updated_at: '2025-09-27T19:55:19.092Z'
               - id: 2
-                first_name: Tanna
-                last_name: Blick
-                middle_name: Glover
-                created_at: '2025-09-26T22:50:49.752Z'
-                updated_at: '2025-09-26T22:50:49.752Z'
+                first_name: Beula
+                last_name: Luettgen
+                middle_name: Rogahn
+                created_at: '2025-09-27T19:55:19.096Z'
+                updated_at: '2025-09-27T19:55:19.096Z'
               - id: 3
-                first_name: Modesta
-                last_name: Koepp
-                middle_name: Hansen
-                created_at: '2025-09-26T22:50:49.755Z'
-                updated_at: '2025-09-26T22:50:49.755Z'
+                first_name: Lesley
+                last_name: Bogan
+                middle_name: O'Connell
+                created_at: '2025-09-27T19:55:19.098Z'
+                updated_at: '2025-09-27T19:55:19.098Z'
               - id: 4
-                first_name: Luigi
-                last_name: Herman
-                middle_name: Hammes
-                created_at: '2025-09-26T22:50:49.757Z'
-                updated_at: '2025-09-26T22:50:49.757Z'
+                first_name: Hai
+                last_name: Jenkins
+                middle_name: Johns
+                created_at: '2025-09-27T19:55:19.102Z'
+                updated_at: '2025-09-27T19:55:19.102Z'
               - id: 5
-                first_name: Lala
-                last_name: Klein
-                middle_name: Bayer
-                created_at: '2025-09-26T22:50:49.759Z'
-                updated_at: '2025-09-26T22:50:49.759Z'
+                first_name: Tawana
+                last_name: Kutch
+                middle_name: Rath
+                created_at: '2025-09-27T19:55:19.104Z'
+                updated_at: '2025-09-27T19:55:19.104Z'
     post:
       summary: create doctor
       tags:
-      - Doctors
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - name: doctor
-        in: body
-        schema:
-          type: object
-          properties:
-            first_name:
-              type: string
-            last_name:
-              type: string
-            middle_name:
-              type: string
-          required:
-          - first_name
-          - last_name
+      - Doctor
+      parameters: []
       responses:
         '201':
           description: Doctor created successfully
-  "/doctors/{id}":
-    parameters:
-    - name: id
-      in: path
-      type: integer
-      description: id
-      required: true
-    get:
-      summary: show doctor
-      responses:
-        '200':
-          description: successful
-          content:
-            application/json:
-              example:
-                id: 6
-                first_name: Albertine
-                last_name: Emard
-                middle_name: Quitzon
-                created_at: '2025-09-26T22:50:50.063Z'
-                updated_at: '2025-09-26T22:50:50.063Z'
-    put:
-      summary: update doctor
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      tags:
-      - Doctors
-      parameters:
-      - name: doctor
-        in: body
-        type: object
-        schema:
-          type: object
-          properties:
-            first_name:
-              type: string
-            last_name:
-              type: string
-            middle_name:
-              type: string
-      responses:
-        '200':
-          description: successful
-          content:
-            application/json:
-              example:
-                first_name: Carson
-                last_name: Blick
-                middle_name: West
-                id: 6
-                created_at: '2025-09-26T22:50:50.229Z'
-                updated_at: '2025-09-26T22:50:50.229Z'
-  "/patients":
-    get:
-      summary: list patients
-      parameters:
-      - name: full_name
-        in: query
-        type: string
-      - name: gender
-        in: query
-        type: string
-      - name: offset
-        in: query
-        type: integer
-      - name: limit
-        in: query
-        type: integer
-      tags:
-      - Patients
-      produces:
-      - application/json
-      responses:
-        '200':
-          description: successful
-          content:
-            application/json:
-              examples:
-                test_example:
-                  value: []
-    post:
-      summary: Create patient
-      tags:
-      - Patients
-      consumes:
-      - application/json
-      parameters:
-      - name: patient
-        in: body
-        schema:
-          type: object
-          properties:
-            patient:
+      requestBody:
+        content:
+          application/json:
+            schema:
               type: object
               properties:
                 first_name:
                   type: string
                 last_name:
                   type: string
-                birthday:
+                middle_name:
                   type: string
-                  format: date
-                height:
-                  type: number
-                weight:
-                  type: number
-                gender:
-                  type: string
-                doctor_ids:
-                  type: array
-                  items:
-                    type: integer
               required:
               - first_name
               - last_name
-              - birthday
-              - height
-              - weight
-              - gender
+  "/doctors/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: integer
+    get:
+      summary: show doctor
+      tags:
+      - Doctor
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example:
+                id: 6
+                first_name: Agustin
+                last_name: Hammes
+                middle_name: Crooks
+                created_at: '2025-09-27T19:55:19.278Z'
+                updated_at: '2025-09-27T19:55:19.278Z'
+    put:
+      summary: update doctor
+      tags:
+      - Doctor
+      parameters: []
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example:
+                first_name: Caleb
+                last_name: Lebsack
+                middle_name: Moore
+                id: 6
+                created_at: '2025-09-27T19:55:19.361Z'
+                updated_at: '2025-09-27T19:55:19.361Z'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                last_name:
+                  type: string
+                middle_name:
+                  type: string
+  "/gender":
+    get:
+      summary: list genders
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example:
+              - id: 1
+                name: Male
+                created_at: '2025-09-27T19:55:19.517Z'
+                updated_at: '2025-09-27T19:55:19.517Z'
+    post:
+      summary: create gender
+      parameters: []
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example:
+                error: 'Error {name: ["Gender name already exists"]}'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                gender:
+                  type: string
+              description: 'gender ex: Male'
+  "/patients":
+    get:
+      summary: list patients
+      parameters:
+      - name: full_name
+        in: query
+        schema:
+          type: string
+      - name: gender
+        in: query
+        schema:
+          type: string
+      - name: offset
+        in: query
+        schema:
+          type: integer
+      - name: limit
+        in: query
+        schema:
+          type: integer
+      tags:
+      - Patients
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example:
+              - id: 1
+                first_name: Sang
+                last_name: Grant
+                middle_name: Mueller
+                gender_id: 1
+                birthday: '1964-04-10'
+                height: 65
+                weight: '250.85'
+                created_at: '2025-09-27T19:55:19.751Z'
+                updated_at: '2025-09-27T19:55:19.751Z'
+                full_name: sang grant mueller
+                doctors:
+                - id: 1
+                  first_name: Noel
+                  last_name: Armstrong
+                  middle_name: Carroll
+                  created_at: '2025-09-27T19:55:19.753Z'
+                  updated_at: '2025-09-27T19:55:19.753Z'
+                - id: 2
+                  first_name: Ava
+                  last_name: Gutkowski
+                  middle_name: Altenwerth
+                  created_at: '2025-09-27T19:55:19.756Z'
+                  updated_at: '2025-09-27T19:55:19.756Z'
+                gender:
+                  id: 1
+                  name: Male
+                  created_at: '2025-09-27T19:55:19.747Z'
+                  updated_at: '2025-09-27T19:55:19.747Z'
+    post:
+      summary: Create patient
+      tags:
+      - Patients
+      parameters: []
       responses:
         '201':
           description: created
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                patient:
+                  type: object
+                  properties:
+                    first_name:
+                      type: string
+                    last_name:
+                      type: string
+                    birthday:
+                      type: string
+                      format: date
+                    height:
+                      type: number
+                    weight:
+                      type: number
+                    gender:
+                      type: string
+                    doctor_ids:
+                      type: array
+                      items:
+                        type: integer
+                  required:
+                  - first_name
+                  - last_name
+                  - birthday
+                  - height
+                  - weight
+                  - gender
   "/patients/{id}":
     parameters:
     - name: id
       in: path
-      type: integer
       description: id
       required: true
+      schema:
+        type: integer
     get:
       summary: show patient
       tags:
@@ -249,56 +369,27 @@ paths:
             application/json:
               example:
                 id: 1
-                first_name: Albertha
-                last_name: VonRueden
-                middle_name: Feil
+                first_name: Domenic
+                last_name: Maggio
+                middle_name: Weimann
                 gender_id: 1
-                birthday: '2006-02-24'
-                height: 210
-                weight: '65.46'
-                created_at: '2025-09-26T22:50:50.691Z'
-                updated_at: '2025-09-26T22:50:50.691Z'
-                full_name: albertha vonrueden feil
+                birthday: '1971-11-13'
+                height: 185
+                weight: '132.94'
+                created_at: '2025-09-27T19:55:19.948Z'
+                updated_at: '2025-09-27T19:55:19.948Z'
+                full_name: domenic maggio weimann
                 doctors: []
                 gender:
                   id: 1
-                  name: Agender
-                  created_at: '2025-09-26T22:50:50.687Z'
-                  updated_at: '2025-09-26T22:50:50.687Z'
+                  name: Female
+                  created_at: '2025-09-27T19:55:19.944Z'
+                  updated_at: '2025-09-27T19:55:19.944Z'
     put:
       summary: update patient
       tags:
       - Patients
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - name: patient
-        in: body
-        description: patient
-        shema:
-          type: object
-          properties:
-            first_name:
-              type: string
-            last_name:
-              type: string
-            middle_name:
-              type: string
-            birthday:
-              type: string
-              format: date
-            height:
-              type: number
-            weight:
-              type: number
-            gender:
-              type: string
-            doctor_ids:
-              type: array
-              items:
-                type: integer
+      parameters: []
       responses:
         '200':
           description: successful
@@ -306,16 +397,16 @@ paths:
             application/json:
               example:
                 id: 1
-                first_name: Serina
-                last_name: Huels
-                middle_name: Heidenreich
+                first_name: Иван
+                last_name: Петров
+                middle_name: Konopelski
                 gender_id: 1
-                birthday: '1997-03-27'
-                height: 161
-                weight: '51.94'
-                created_at: '2025-09-26T22:50:50.842Z'
-                updated_at: '2025-09-26T22:50:50.842Z'
-                full_name: serina huels heidenreich
+                birthday: '1990-01-01'
+                height: 180
+                weight: '75.0'
+                created_at: '2025-09-27T19:55:20.024Z'
+                updated_at: '2025-09-27T19:55:20.033Z'
+                full_name: иван петров konopelski
                 doctors: []
 servers:
 - url: http://{defaultHost}
