# app/controllers/patients_controller.rb
@@ -1,15 +1,11 @@
-
 class PatientsController < ApplicationController
   def index
     patients = Patients::FilterQuery.new(params).call
-    render json: patients.to_json(include: [:doctors, :gender])
+    render json: patients.to_json(include: [ :doctors, :gender ])
   end
-
-
 
   def create
     Rails.logger.debug "CREATE PARAMS: #{params.to_unsafe_h}"
-
 
     attrs = patient_params.to_h
     return unless get_gender_or_throw(attrs)
@@ -20,18 +16,23 @@ class PatientsController < ApplicationController
       patient.reload
       render json: patient.as_json(include: :doctors), status: :created
     else
-      render json: {errors: patient.errors}, status: :unprocessable_entity
+      render json: { errors: patient.errors }, status: :unprocessable_entity
 
     end
   end
 
   def show
-    patient = Patient.find(params[:id])
+    patient = nil
+    begin
+      patient = Patient.find(params[:id])
+    rescue => error
+      return render json: { error: "#{error}" }, status: :unprocessable_entity
+    end
 
     if patient
-      render json: patient.as_json(include: [:doctors, :gender])
+      render json: patient.as_json(include: [ :doctors, :gender ])
     else
-      render json: {errors: patient.errors}, status: :unprocessable_entity
+
     end
   end
 
@@ -42,12 +43,11 @@ class PatientsController < ApplicationController
     attrs = patient_params.to_h
     return unless get_gender_or_throw(attrs)
 
-
     if patient.update(attrs)
       patient.reload
       render json: patient.as_json(include: :doctors), status: :ok
     else
-      render json: {errors: patient.errors}, status: :unprocessable_entity
+      render json: { errors: patient.errors }, status: :unprocessable_entity
     end
 
   end
@@ -60,6 +60,7 @@ class PatientsController < ApplicationController
   end
 
   private
+
   def patient_params
     params.require(:patient).permit(:first_name, :last_name, :middle_name, :birthday, :height, :weight, :gender, doctor_ids: [],)
 
@@ -72,7 +73,7 @@ class PatientsController < ApplicationController
 
     gender = Gender.find_by(name: gender_name)
     unless gender
-      render json: { errors: ["Gender '#{gender_name}' not found"] }, status: :unprocessable_entity
+      render json: { errors: [ "Gender '#{gender_name}' not found" ] }, status: :unprocessable_entity
       return false
     end
 
